--- a/index.ipynb
+++ b/index.ipynb
@@ -27,10 +27,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model 1 Predictions</th>\n",
+       "      <th>Model 2 Predictions</th>\n",
+       "      <th>Model 3 Predictions</th>\n",
+       "      <th>Labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Model 1 Predictions  Model 2 Predictions  Model 3 Predictions  Labels\n",
+       "0                    1                    1                    1       1\n",
+       "1                    1                    1                    1       1\n",
+       "2                    1                    1                    1       1\n",
+       "3                    0                    1                    1       0\n",
+       "4                    0                    0                    1       1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "model_perf_df = pd.read_csv('model_performance.csv')\n",
+    "model_perf_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model1_preds = None\n",
-    "model2_preds = None\n",
-    "model3_preds = None\n",
-    "labels = None"
+    "model1_preds = model_perf_df['Model 1 Predictions']\n",
+    "model2_preds = model_perf_df['Model 2 Predictions']\n",
+    "model3_preds = model_perf_df['Model 3 Predictions']\n",
+    "labels = model_perf_df['Labels']"
    ]
   },
   {
@@ -71,12 +156,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def conf_matrix(y_true, y_pred):\n",
-    "    pass"
+    "    cm = {'TP':0,'TN':0,'FP':0,'FN':0}\n",
+    "    for ind,label in enumerate(y_true):\n",
+    "        pred = y_pred[ind]\n",
+    "        if label == 1:\n",
+    "            if label == pred:\n",
+    "                #True Positive\n",
+    "                cm['TP']+=1\n",
+    "            else:\n",
+    "                #false negative\n",
+    "                cm['FN']+=1\n",
+    "        else:\n",
+    "            if label == pred:\n",
+    "                #True Negative\n",
+    "                cm['TN']+=1\n",
+    "            else: \n",
+    "                #false positivee\n",
+    "                cm['FP']+=1\n",
+    "    return cm"
    ]
   },
   {
@@ -88,34 +190,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'TP': 6168, 'TN': 2654, 'FP': 346, 'FN': 832}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Model 1 Expected Output: {'TP': 6168, 'TN': 2654, 'FP': 346, 'FN': 832}\n",
-    "model1_confusion_matrix = None\n",
+    "model1_confusion_matrix = conf_matrix(labels, model1_preds)\n",
     "model1_confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'TP': 3914, 'TN': 1659, 'FP': 1341, 'FN': 3086}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Model 2 Expected Output: {'TP': 3914, 'TN': 1659, 'FP': 1341, 'FN': 3086}\n",
-    "model2_confusion_matrix = None\n",
+    "model2_confusion_matrix = conf_matrix(labels, model2_preds)\n",
     "model2_confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'TP': 5505, 'TN': 2319, 'FP': 681, 'FN': 1495}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Model 3 Expected Output: {'TP': 5505, 'TN': 2319, 'FP': 681, 'FN': 1495}\n",
-    "model3_confusion_matrix = None\n",
+    "model3_confusion_matrix = conf_matrix(labels, model3_preds)\n",
     "model3_confusion_matrix"
    ]
   },
@@ -132,33 +267,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2654,  346],\n",
+       "       [ 832, 6168]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "model1_sk_cm = None\n",
+    "model1_sk_cm = confusion_matrix(labels, model1_preds)\n",
     "model1_sk_cm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1659, 1341],\n",
+       "       [3086, 3914]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model2_sk_cm = None\n",
+    "model2_sk_cm = confusion_matrix(labels, model2_preds)\n",
     "model2_sk_cm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2319,  681],\n",
+       "       [1495, 5505]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model3_sk_cm = None\n",
+    "model3_sk_cm = confusion_matrix(labels, model3_preds)\n",
     "model3_sk_cm"
    ]
   },
@@ -238,12 +409,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.94688363524716\n",
+      "0.744814462416746\n",
+      "0.8899127061105723\n"
+     ]
+    }
+   ],
    "source": [
+    "# {'TP': 6168, 'TN': 2654, 'FP': 346, 'FN': 832}\n",
+    "\n",
     "def precision(confusion_matrix):\n",
-    "    pass\n",
+    "    prec = confusion_matrix['TP']/(confusion_matrix['TP']+confusion_matrix['FP'])\n",
+    "    return prec\n",
     "print(precision(model1_confusion_matrix)) # Expected Output: 0.94688363524716\n",
     "print(precision(model2_confusion_matrix)) # Expected Output: 0.744814462416746\n",
     "print(precision(model3_confusion_matrix)) # Expected Output: 0.8899127061105723"
@@ -251,12 +435,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8811428571428571\n",
+      "0.5591428571428572\n",
+      "0.7864285714285715\n"
+     ]
+    }
+   ],
    "source": [
     "def recall(confusion_matrix):\n",
-    "    pass\n",
+    "    rec = confusion_matrix['TP']/(confusion_matrix['TP']+confusion_matrix['FN'])\n",
+    "    return rec\n",
     "\n",
     "print(recall(model1_confusion_matrix)) # Expected Output: 0.8811428571428571\n",
     "print(recall(model2_confusion_matrix)) # Expected Output: 0.5591428571428572\n",
@@ -265,12 +460,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8822\n",
+      "0.5573\n",
+      "0.7824\n"
+     ]
+    }
+   ],
    "source": [
     "def accuracy(confusion_matrix):\n",
-    "    pass\n",
+    "    acc = (confusion_matrix['TP']+\n",
+    "           confusion_matrix['TN'])/(confusion_matrix['TP']+\n",
+    "                                    confusion_matrix['TN']+\n",
+    "                                    confusion_matrix['FP']+\n",
+    "                                    confusion_matrix['FN'])\n",
+    "    return acc\n",
     "\n",
     "print(accuracy(model1_confusion_matrix)) # Expected Output: 0.8822\n",
     "print(accuracy(model2_confusion_matrix)) # Expected Output: 0.5573\n",
@@ -279,12 +489,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9128311380790292\n",
+      "0.6387596899224806\n",
+      "0.8349764902168968\n"
+     ]
+    }
+   ],
    "source": [
     "def f1(confusion_matrix):\n",
-    "    pass\n",
+    "    f1_stat = 2*((precision(confusion_matrix)*\n",
+    "                  recall(confusion_matrix))/(precision(confusion_matrix)+\n",
+    "                                             recall(confusion_matrix)))\n",
+    "    return f1_stat\n",
     "\n",
     "print(f1(model1_confusion_matrix)) # Expected Output: 0.9128311380790292\n",
     "print(f1(model2_confusion_matrix)) # Expected Output: 0.6387596899224806\n",
@@ -313,22 +536,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------\n",
+      "Model 1 Metrics:\n",
+      "Precision: <function precision_score at 0x7ff67971f400>\n",
+      "Recall: <function recall_score at 0x7ff67971f488>\n",
+      "Accuracy: <function accuracy_score at 0x7ff679715e18>\n",
+      "F1-Score: <function f1_score at 0x7ff67971f1e0>\n",
+      "----------------------------------------\n",
+      "Model 2 Metrics:\n",
+      "Precision: <function precision_score at 0x7ff67971f400>\n",
+      "Recall: <function recall_score at 0x7ff67971f488>\n",
+      "Accuracy: <function accuracy_score at 0x7ff679715e18>\n",
+      "F1-Score: <function f1_score at 0x7ff67971f1e0>\n",
+      "----------------------------------------\n",
+      "Model 3 Metrics:\n",
+      "Precision: <function precision_score at 0x7ff67971f400>\n",
+      "Recall: <function recall_score at 0x7ff67971f488>\n",
+      "Accuracy: <function accuracy_score at 0x7ff679715e18>\n",
+      "F1-Score: <function f1_score at 0x7ff67971f1e0>\n"
+     ]
+    }
+   ],
    "source": [
     "# Import everything needed here first!\n",
-    "\n",
+    "from sklearn.metrics import precision_score, recall_score, accuracy_score, f1_score\n",
     "\n",
     "preds = [model1_preds, model2_preds, model3_preds]\n",
     "\n",
     "for ind, i in enumerate(preds):\n",
     "    print('-'*40)\n",
     "    print('Model {} Metrics:'.format(ind + 1))\n",
-    "    print('Precision: {}'.format(None))\n",
-    "    print('Recall: {}'.format(None))\n",
-    "    print('Accuracy: {}'.format(None))\n",
-    "    print('F1-Score: {}'.format(None))"
+    "    print('Precision: {}'.format(precision_score))\n",
+    "    print('Recall: {}'.format(recall_score))\n",
+    "    print('Accuracy: {}'.format(accuracy_score))\n",
+    "    print('F1-Score: {}'.format(f1_score))"
    ]
   },
   {
@@ -384,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
