--- a/index.ipynb
+++ b/index.ipynb
@@ -573,7 +573,7 @@
     "for ind, i in enumerate(preds):\n",
     "    print('-'*40)\n",
     "    print('Model {} Metrics:'.format(ind + 1))\n",
-    "    print('Precision: {}'.format(precision_score))\n",
+    "    print('Precision: {}'.format(precision_score(labels)))\n",
     "    print('Recall: {}'.format(recall_score))\n",
     "    print('Accuracy: {}'.format(accuracy_score))\n",
     "    print('F1-Score: {}'.format(f1_score))"
