--- a/index.ipynb
+++ b/index.ipynb
@@ -575,8 +575,8 @@
     "    print('Model {} Metrics:'.format(ind + 1))\n",
     "    print('Precision: {}'.format(precision_score(labels,i)))\n",
     "    print('Recall: {}'.format(recall_score(labels,i)))\n",
-    "    print('Accuracy: {}'.format(accuracy_score))\n",
-    "    print('F1-Score: {}'.format(f1_score))"
+    "    print('Accuracy: {}'.format(accuracy_score(labels,i)))\n",
+    "    print('F1-Score: {}'.format(f1_score(labels,i)))"
    ]
   },
   {
