Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -27,90 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Model 1 Predictions</th>\n",
-       "      <th>Model 2 Predictions</th>\n",
-       "      <th>Model 3 Predictions</th>\n",
-       "      <th>Labels</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Model 1 Predictions  Model 2 Predictions  Model 3 Predictions  Labels\n",
-       "0                    1                    1                    1       1\n",
-       "1                    1                    1                    1       1\n",
-       "2                    1                    1                    1       1\n",
-       "3                    0                    1                    1       0\n",
-       "4                    0                    0                    1       1"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "model_perf_df = pd.read_csv('model_performance.csv')\n",
@@ -536,31 +455,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------\n",
-      "Model 1 Metrics:\n",
-      "Precision: <function precision_score at 0x7ff67971f400>\n",
-      "Recall: <function recall_score at 0x7ff67971f488>\n",
-      "Accuracy: <function accuracy_score at 0x7ff679715e18>\n",
-      "F1-Score: <function f1_score at 0x7ff67971f1e0>\n",
-      "----------------------------------------\n",
-      "Model 2 Metrics:\n",
-      "Precision: <function precision_score at 0x7ff67971f400>\n",
-      "Recall: <function recall_score at 0x7ff67971f488>\n",
-      "Accuracy: <function accuracy_score at 0x7ff679715e18>\n",
-      "F1-Score: <function f1_score at 0x7ff67971f1e0>\n",
-      "----------------------------------------\n",
-      "Model 3 Metrics:\n",
-      "Precision: <function precision_score at 0x7ff67971f400>\n",
-      "Recall: <function recall_score at 0x7ff67971f488>\n",
-      "Accuracy: <function accuracy_score at 0x7ff679715e18>\n",
-      "F1-Score: <function f1_score at 0x7ff67971f1e0>\n"
+     "ename": "NameError",
+     "evalue": "name 'model1_preds' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-e498bfab3dfc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprecision_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecall_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mpreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmodel1_preds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel2_preds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel3_preds\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mind\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model1_preds' is not defined"
      ]
     }
    ],
