--- a/index.ipynb
+++ b/index.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -536,18 +536,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'model1_preds' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-e498bfab3dfc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprecision_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecall_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mpreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmodel1_preds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel2_preds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel3_preds\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mind\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model1_preds' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------\n",
+      "Model 1 Metrics:\n",
+      "Precision: 0.94688363524716\n",
+      "Recall: 0.8811428571428571\n",
+      "Accuracy: 0.8822\n",
+      "F1-Score: 0.9128311380790292\n",
+      "----------------------------------------\n",
+      "Model 2 Metrics:\n",
+      "Precision: 0.744814462416746\n",
+      "Recall: 0.5591428571428572\n",
+      "Accuracy: 0.5573\n",
+      "F1-Score: 0.6387596899224806\n",
+      "----------------------------------------\n",
+      "Model 3 Metrics:\n",
+      "Precision: 0.8899127061105723\n",
+      "Recall: 0.7864285714285715\n",
+      "Accuracy: 0.7824\n",
+      "F1-Score: 0.8349764902168968\n"
      ]
     }
    ],
