--- a/index.ipynb
+++ b/index.ipynb
@@ -599,6 +599,7 @@
    "outputs": [],
    "source": [
     "# Import classification_report below!\n",
+    "import \n",
     "\n",
     "for ind, i in enumerate(preds):\n",
     "    print('-'*40)\n",
